third_party/move/move-bytecode-verifier/transactional-tests/tests/control_flow/if_branch_diverges_6.exp
processed 1 task
task 0 lines 1-16:  run [script]
Error: error: unknown instruction `br`
   ┌─ test:14:10
   │
14 │ loop_b0: br loop_cont
   │          ^^^^^^^^^^^^


